<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">酒来了物流端</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="company">南京壹前零后科技有限公司</string>
    <string name="copyright">版权所有</string>
    <string name="wine_logistics">酒来了物流端</string>
    <string name="exit">再按一次退出程序</string>

    <!-- account -->
    <string name="login_emptyname_or_emptypwd">用户名或密码为空，请重新输入</string>
    <string name="login">登录</string>
    <string name="phone">手机</string>
    <string name="psw">密码</string>
    <string name="reg">注册</string>
    <string name="msg">消息</string>
    <string name="login_successful">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="user_name_hint">请输入用户名</string>
    <string name="user_psw_hint">请输入密码</string>
    <string name="user_confirm_psw_hint">请再次输入密码</string>
    <string name="modify_pwd_suc">密码修改成功</string>

    <!-- menu_title -->
    <string name="rob_order">抢单</string>
    <string name="rob_order_history">抢单历史</string>
    <string name="logistics_confirm">物流确认</string>
    <string name="modify_password">修改密码</string>

    <!--  -->
    <string name="submit">提交</string>
    <string name="confirm">确定</string>
    <string name="logistics_code_hint">请输入验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="mobile_phone_hint">请填写手机号码</string>
    <string name="grab_order_suc">抢单成功</string>
    <string name="grab_order_fail">抢单失败</string>
    <string name="total_grab_tag">共抢单</string>
    <string name="total_money">累计金额</string>
    <string name="bill">单</string>
    <string name="yuan">元</string>
    <string name="today">今天</string>
    <string name="history">历史</string>
    <string name="auth_receive">收货验证</string>
    <string name="auth_receive_suc">验证成功</string>
    <string name="auth_receive_fail">验证失败</string>
    <string name="null_confrim_hint">配送员辛苦了，休息一下！</string>
    

</resources>