<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:gravity="center"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_title_bg"
        android:padding="10dip" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rob_order_history"
                android:textColor="@color/white"
                android:textSize="@dimen/large_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/large_text_size" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:padding="8dip"
            android:src="@drawable/back_selector"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:background="@color/white"
        android:padding="10dip" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dip"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_grab_tag"
                android:textColor="@color/blue_text"
                android:textSize="@dimen/medium_text_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/garb_history_total_num_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue_text"
                    android:textSize="@dimen/large_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bill"
                    android:textColor="@color/blue_text"
                    android:textSize="@dimen/small_text_size" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dip"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_income"
                android:textColor="@color/blue_text"
                android:textSize="@dimen/medium_text_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/garb_history_total_income_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue_text"
                    android:textSize="@dimen/large_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yuan"
                    android:textColor="@color/blue_text"
                    android:textSize="@dimen/small_text_size" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/garb_history_today_num_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dip"
        android:text="@string/today"
        android:textColor="@color/blue_text"
        android:textSize="@dimen/small_text_size" />

    <ListView
        android:id="@+id/grab_order_history_list_today_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:divider="@color/white"
        android:dividerHeight="5dip"
        android:fastScrollEnabled="false"
        android:scrollbars="none" />

    <TextView
        android:id="@+id/garb_history_history_num_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dip"
        android:text="@string/history"
        android:textColor="@color/blue_text"
        android:textSize="@dimen/small_text_size" />

    <ListView
        android:id="@+id/grab_order_history_list_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dip"
        android:divider="@color/white"
        android:dividerHeight="5dip"
        android:fastScrollEnabled="false"
        android:scrollbars="none" />

</LinearLayout>