<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_title_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="10dip"
            android:text="@string/modify_password"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text_size" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="20dip"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corners_bg_gray"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >

            <EditText
                android:id="@+id/modify_psw_phone_et"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/user_name_hint"
                android:imeActionLabel="下一步"
                android:imeOptions="actionNext|flagNoExtractUi"
                android:maxLength="50"
                android:paddingBottom="6.0dip"
                android:paddingLeft="40dip"
                android:paddingTop="6.0dip"
                android:singleLine="true"
                android:textColor="@color/blue_text"
                android:textSize="@dimen/small_text_size" />
            <!-- android:imeOptions="actionNext|flagNoExtractUi" -->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/modify_psw_phone_et"
                android:layout_centerVertical="true"
                android:paddingLeft="10.0dip"
                android:paddingRight="10dip"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_phone" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip" >

            <RelativeLayout
                android:layout_width="190dip"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@drawable/corners_bg_gray"
                android:paddingBottom="5dip"
                android:paddingTop="5dip" >

                <EditText
                    android:id="@+id/modify_psw_code_et"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/logistics_code_hint"
                    android:imeActionLabel="下一步"
                    android:imeOptions="actionNext|flagNoExtractUi"
                    android:maxLength="50"
                    android:paddingBottom="6.0dip"
                    android:paddingLeft="40dip"
                    android:paddingTop="6.0dip"
                    android:singleLine="true"
                    android:textColor="@color/black_character"
                    android:textSize="@dimen/small_text_size" />
                <!-- android:imeOptions="actionNext|flagNoExtractUi" -->

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/modify_psw_code_et"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10.0dip"
                    android:paddingRight="10dip"
                    android:src="@drawable/ic_code" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/modify_psw_code_ll"
                android:layout_width="90dip"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/corners_bg_orange_all"
                android:gravity="center"
                android:paddingBottom="5dip"
                android:paddingTop="5dip" >

                <TextView
                    android:id="@+id/modify_psw_code_btn_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingBottom="5dip"
                    android:paddingTop="5dip"
                    android:text="@string/get_verification_code"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_text_size" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@drawable/corners_bg_gray"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >

            <EditText
                android:id="@+id/modify_psw_psw_et"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/user_psw_hint"
                android:imeActionLabel="下一步"
                android:imeOptions="actionDone|flagNoExtractUi"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1"
                android:paddingBottom="6.0dip"
                android:paddingLeft="40dip"
                android:paddingTop="6.0dip"
                android:textColor="@color/blue_text"
                android:textSize="@dimen/small_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/modify_psw_psw_et"
                android:layout_centerVertical="true"
                android:paddingLeft="10.0dip"
                android:paddingRight="10dip"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_psw" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@drawable/corners_bg_gray"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >

            <EditText
                android:id="@+id/modify_psw_confirm_psw_et"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/user_confirm_psw_hint"
                android:imeActionLabel="下一步"
                android:imeOptions="actionDone|flagNoExtractUi"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1"
                android:paddingBottom="6.0dip"
                android:paddingLeft="40dip"
                android:paddingTop="6.0dip"
                android:textColor="@color/blue_text"
                android:textSize="@dimen/small_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/modify_psw_confirm_psw_et"
                android:layout_centerVertical="true"
                android:paddingLeft="10.0dip"
                android:paddingRight="10dip"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_psw" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/modify_psw_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="20dip"
        android:background="@drawable/corners_bg_red"
        android:gravity="center"
        android:paddingBottom="8dip"
        android:paddingTop="8dip"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/middle_text_size" />

</LinearLayout>